[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/turret/crystal.png" type="Texture" id=1]
[ext_resource path="res://entities/turret/turret.gd" type="Script" id=2]
[ext_resource path="res://ui/hp_bar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.8, 8.8 )

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[node name="turret" type="StaticBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
rotation = -1.5708
texture = ExtResource( 1 )

[node name="target_collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="shape" type="CollisionShape2D" parent="target_collider"]
shape = SubResource( 2 )

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="tween" type="Tween" parent="."]

[node name="hp_bar" parent="." instance=ExtResource( 3 )]
position = Vector2( -12.226, -15.643 )
scale = Vector2( 0.387, 0.197 )
